2003-03-10  Oliver Schirrmeister <oschirr@abm.de>

	* backend/fujitsu.c backund/fujitsu-scsi.h backend/fujitsu.h
          * patch from Ron Cemer <ron@roncemer.com>
	    fixes the broken "ADF empty" detection on the Fujitsu scanners 
	    when connected via USB.  It also fixes a sense-request issues,
	    which were required in order to determine whether the ADF is 
	    empty.  It also eliminates some duplicate code blocks.
	  * renamed some functions
	
2003-03-13  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c backend/gt68xx_devices.c backend/gt68xx_low.h
	  doc/sane-gt68xx.man doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES: Added Packard Bell Diamond 1200 Plus to
	  .desc and manpage. New flag to avoid running stop_scan before doing
	  a scan. The Windows firmware of the BearPaw 1200 CU Plus doesn't
	  seem to like that.
	* doc/descriptions/unsupported.desc: Added some Boeder, Brother, HP and
	  Trust scanners.
	* TODO: Removed fujitsu and ma1509 entries. Updated .desc files and
	  global variables entry.

2003-03-10  Oliver Schirrmeister <oschirr@abm.de>

	* backend/fujitsu.c backund/fujitsu-scsi.h
          displays the offending byte when something is wrong in the
          window descriptor block.
	
2003-03-09  Eddy De Greef <eddy_de_greef at tiscali dot be>

	* backend/mustek_pp_cis.c backend/mustek_pp_cis.h: Fixed two
          calibration bugs: one occasionally caused overexposed images at 
          all resolutions; the other one occasionally caused color inbalances
          when scanning narrow areas at high resolutions.

2003-03-09  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* sanei/sanei_scsi.c: Wait for the completion of all SCSI commands in
	  sanei_scsi_flush_all_extended (Linux). Without this fix, especially
	  long running commands and command queuing would cause memory
	  corruption if the buffer was invalid after the flush command.
	* doc/descriptions/abaton.desc: Removed link to everex (timeout).
