@@ -1,3 +1,11 @@
+2003-03-16  Henning Meier-Geinitz <henning@meier-geinitz.de>
+
+	* sanei/sanei_scsi.c: OS/2 specific changes: memory for SRB now is
+	  allocated using _tcalloc() instead of allocating on stack to avoid
+	  crossing 64k borders due to restrictions of 16-bit device-driver.
+	  Cosmetic changes and some casts to reduce compiler-warnings. Patch
+	  from Franz Bakan <fbakan@gmx.net>.
+
 2003-03-10  Oliver Schirrmeister <oschirr@abm.de>
 
 	* backend/fujitsu.c backund/fujitsu-scsi.h backend/fujitsu.h
